--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jiandandaoxingfu.github.io/React-tailwindcss",
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^18.2.0",
