--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
     "autoprefixer": "^10.4.13",
+    "daisyui": "^2.41.0",
+    "i": "^0.3.7",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
     "web-vitals": "^3.1.0"
